--- a/gradle/dependencies-compile.gradle
+++ b/gradle/dependencies-compile.gradle
@@ -20,4 +20,9 @@
 
 dependencies {
   // implementation(group: 'com.google.guava', name: 'guava', version: '25.1-jre')
+  implementation(group: 'org.yaml', name: 'snakeyaml', version: '[1.23, 2.0[')
+  api(group: 'org.spdx', name: 'spdx-tools', version: '[2.1.15, 3[') {
+    exclude(group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl')
+    exclude(group: 'org.apache.logging.log4j', module: 'log4j-core')
+  }
 }
