--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -18,27 +18,32 @@
  * permissions and limitations under the License.
  */
 plugins {
-  id 'org.fidata.project'
-}
-
-// TODO: move all this to .ABOUT file
-description = '' // TODO
-tags.set(['ABOUT', 'AboutCode', 'info', 'contacts', 'license', 'meta', 'metadata'])
-//noinspection GroovyUnusedAssignment
-license = 'Apache-2.0'
-//noinspection GroovyUnusedAssignment
-publicReleases = true
-contacts {
-  'grv87@yandex.ru' {
-    moniker 'Basil Peace'
-    github 'grv87'
-    roles 'owner', 'developer'
-  }
+  id 'org.fidata.project.groovy'
+  id 'org.fidata.plugin'
 }
 
 ext.rootDir = file('.')
 
-tasks.named('codenarcBuildSrc').configure {
-  disabledRules.addAll 'JavaIoPackageAccess' // TODO, 'DuplicateNumberLiteral'
+dependencies {
+  api project(path: ':library')
+}  
+
+apply from: new File(ext.rootDir, 'gradle/gradle-plugin-markers.gradle')
+
+stutter {
+  java(8) {
+    compatibleRange '2.10'
+  }
+  java(9) {
+    compatibleRange '2.10'
+  }
 }
 
+tasks.named('codenarcCompatTest').configure {
+  disabledRules.add 'JavaIoPackageAccess' // TODO
+}
+pluginBundle.plugins {
+  aboutPlugin {
+    displayName = 'Gradle About plugin'
+  }
+}
