--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -21,6 +21,7 @@ plugins {
   id 'org.fidata.project.groovy'
   id 'org.fidata.plugin'
 }
+// publicReleases = true // TODO
 
 ext.rootDir = file('.')
 
@@ -42,8 +43,9 @@ stutter {
 tasks.named('codenarcCompatTest').configure {
   disabledRules.add 'JavaIoPackageAccess' // TODO
 }
-pluginBundle.plugins {
+/*pluginBundle.plugins {
   aboutPlugin {
     displayName = 'Gradle About plugin'
   }
 }
+*/
