--- a/gradle-plugin/base/build.gradle
+++ b/gradle-plugin/base/build.gradle
@@ -31,6 +31,7 @@ dependencies {
      exclude(group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl')
      exclude(group: 'org.apache.logging.log4j', module: 'log4j-core')
   }
+  api(group: 'org.apache.maven.scm', name: 'maven-scm', version: '[1, 2[')
 }
 
 apply from: new File(ext.rootDir, 'gradle/gradle-plugin-markers.gradle')
