--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,27 +1,15 @@
 // SPDX-Copyright: ©  Basil Peace
 // SPDX-License-Identifier: Apache-2.0
-plugins {
-  id 'java'
-  id 'groovy'
-  id 'java-library'
-  id 'java-gradle-plugin'
-  // id 'io.franzbecker.gradle-lombok' version ''
-  /*id 'org.fidata.project.java' version '6.0.1-hotfix-publishPluginJar-SNAPSHOT' apply false
-  id 'org.fidata.project.groovy' version '6.0.1-hotfix-publishPluginJar-SNAPSHOT' apply false
-  id 'org.fidata.plugin' version '6.0.1-hotfix-publishPluginJar-SNAPSHOT' apply false*/
-}
 
-// group = 'org.fidata.gradle'
+/*plugins {
+  id 'org.fidata.project' version '6.0.1-hotfix-publishPluginJar-SNAPSHOT'
+}*/
 
 ext.rootDir = file('..')
 
 apply from: new File(ext.rootDir, 'buildSrc/gradle/load-properties.gradle')
 
-/*apply plugin: 'org.fidata.project.java'
-apply plugin: 'org.fidata.project.groovy'
-apply plugin: 'org.fidata.plugin'*/
-
-// dependencyLocking.lockAllConfigurations()
+dependencyLocking.lockAllConfigurations()
 
 repositories {
   maven {
@@ -32,10 +20,6 @@ repositories {
     }
   }
 }
-
-/*configurations.all { Configuration configuration ->
-  configuration.resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-}*/
 
 String basePluginsVersion = '6.0.1-hotfix-publishPluginJar-SNAPSHOT' // TODO
 
@@ -49,24 +33,12 @@ dependencies {
 TODO:
 configurations.all {
   resolutionStrategy.dependencySubstitution {
-    substitute module('org.fidata:about-library') with project(':')
+    substitute module('org.fidata:about-library') with project(':') // TODO
     substitute module('org.fidata.gradle:gradle-about-plugin') with project(':')
   }
 }
 
-apply from: new File(ext.rootDir, 'library/gradle/dependencies-compile.gradle')
-
-sourceSets.main {
-  java.srcDirs = ["${ project.ext.rootDir }/library/src/main/java", "${ project.ext.rootDir }/plugin/src/main/java"]
-  groovy.srcDirs = ["${ project.ext.rootDir }/library/src/main/groovy", "${ project.ext.rootDir }/plugin/src/main/groovy"]
-  resources.srcDirs = ["${ project.ext.rootDir }/library/src/main/resources", "${ project.ext.rootDir }/plugin/src/main/resources"]
-}
-
-apply from: new File(ext.rootDir, 'plugin/gradle/gradle-plugin-markers.gradle')
-
 // TODO
 compatTest.enabled = false
 checkstyleMain.enabled = false
-codenarcMain.enabled = false
-
-*/
+codenarcMain.enabled = false*/
