--- a/settings.gradle
+++ b/settings.gradle
@@ -18,19 +18,4 @@ ext.rootDir = file('.')
 
 apply from: new File(ext.rootDir, 'gradle/build-cache.gradle')
 
-[
-  'library:base',
-  'library:extended',
-  'library:maven',
-  'gradle-plugin:base',
-  'gradle-plugin:maven',
-  'gradle-plugin:bintray',
-  'gradle-plugin:plugin-publish',
-  'gradle-plugin:nebula:contacts',
-  'gradle-plugin:nebula:bintray',
-  'gradle-plugin:toolkit-base',
-  'gradle-plugin:toolkit',
-].each {
-  include it
-  project(":$it").projectDir = new File(ext.rootDir, it.replace(':', '/')) // TODO: Find convenient method in Gradle API
-}
+apply from: new File(ext.rootDir, 'gradle/subprojects.gradle')
