--- a/gradle/subprojects.gradle
+++ b/gradle/subprojects.gradle
@@ -5,7 +5,9 @@
   'library:extended',
   'library:maven',
   'gradle-plugin:base',
+  'gradle-plugin:extended',
   'gradle-plugin:maven',
+  'gradle-plugin:ivy',
   'gradle-plugin:bintray',
   'gradle-plugin:plugin-publish',
   'gradle-plugin:nebula:contacts',
