--- a/model/extended/build.gradle
+++ b/model/extended/build.gradle
@@ -15,10 +15,7 @@ dependencies {
   implementation(group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava', version: '[2.9, 3[')
   implementation(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '[2.9, 3[')
   implementation(group: 'com.github.jonpeterson', name: 'jackson-module-model-versioning', version: '[1.2.2, 2[')
-  api(group: 'org.spdx', name: 'spdx-tools', version: '[2.1.15, 3[') {
-    // exclude(group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl')
-    // exclude(group: 'org.apache.logging.log4j', module: 'log4j-core')
-  }
+  api(group: 'org.spdx', name: 'spdx-tools', version: '[2.1.15, 3[')
 }
 
 configurations {
@@ -35,15 +32,13 @@ dependencies {
   testFixturesCompile localGroovy()
   testFixturesCompile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
   testCompile localGroovy()
-  testCompile sourceSets.testFixtures.output // configurations.testFixtures
-  functionalTestCompile sourceSets.testFixtures.output // configurations.testFixtures
+  testCompile sourceSets.testFixtures.output
+  functionalTestCompile sourceSets.testFixtures.output
   functionalTestCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '[1, 2['
 }
 
 task testFixturesJar(type: Jar) {
-  from compileTestFixturesJava
-  from compileTestFixturesGroovy
-  // from sourceSets.testFixtures.output
+  from sourceSets.testFixtures.output
   classifier 'testFixtures'
 }
 artifacts {
