--- a/model/extended/build.gradle
+++ b/model/extended/build.gradle
@@ -35,6 +35,23 @@ dependencies {
   testCompile sourceSets.testFixtures.output
   functionalTestCompile sourceSets.testFixtures.output
   functionalTestCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '[1, 2['
+  /*
+   * CAVEAT:
+   * Gradle doesn't handle dependencyManagement (BOM) strictly.
+   * See https://github.com/gradle/gradle/issues/4979
+   * So, we have to use direct dependency instead of constraints
+   * TODO: Test on fresh Gradle
+   */
+  /*
+   * Required to overcome errors in IDEA Groovy console:
+   * ERROR org.apache.jena.util.Metadata - Unexpected Throwable
+   * java.lang.LinkageError: loader constraint violation: when resolving overridden method
+   * "org.apache.xerces.jaxp.DocumentBuilderImpl.setErrorHandler(Lorg/xml/sax/ErrorHandler;)V"
+   * the class loader (instance of org/codehaus/groovy/tools/RootLoader) of the current class,
+   * org/apache/xerces/jaxp/DocumentBuilderImpl, and its superclass loader (instance of <bootloader>),
+   * have different Class objects for the type org/xml/sax/ErrorHandler used in the signature
+   */
+  runtimeOnly(group: 'xerces', name: 'xercesImpl', version: '[2.12.0, 3[')
 }
 
 task testFixturesJar(type: Jar) {
